# curryGPU

./: .gitignore  README.md
.github/workflows/: iss.yml  pages.yml
docs/design/: index.html  isa.html  iss.html
docs/implement/ISS/: plan-foundation-s2r.md  plan-foundation.md  plan-its.md  plan-memsync.md  research-its.md  research-memsync.md  research-notes.md  spec-iss.md  spec.md
isa/currygpu/: __init__.py
isa/currygpu/isa/: __init__.py  assembler.py  codegen.py  schema.py
isa/currygpu/isa/layout/: __init__.py  sample.py
iss/: CMakeLists.txt  pyproject.toml
iss/binding/: atomic_ops.cpp  atomic_ops.h  block_state.h  cta_barrier.cpp  cta_barrier.h  memory_space.cpp  memory_space.h  native.cpp  race_shadow.cpp  race_shadow.h
iss/currygpu/: __init__.py
iss/currygpu/iss/: __init__.py  native.py
iss/tests/cpp/: decode_smoke.cpp  memory_space_smoke.cpp
tests/isa/: test_assembler.py  test_codegen.py
tests/iss/: its_corpus.py  test_its_metamorphic.py  test_native.py
tests/structure/: test_public_artifact.py  test_spec_iss.py  test_structure.py
tools/: check_public_artifact.py  check_structure.py
