[build-system]
requires = ["scikit-build-core>=0.12", "pybind11>=2.13"]
build-backend = "scikit_build_core.build"

[project]
name = "currygpu-iss"
version = "0.1.0"
description = "Functional ISS foundation for curryGPU"
requires-python = ">=3.11"
license = {text = "Proprietary"}

[tool.scikit-build]
wheel.packages = ["currygpu"]
build-dir = "build/{wheel_tag}"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["../tests"]
pythonpath = ["../isa", "."]
